--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-size: 18px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -19,7 +20,7 @@ main {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2.5em;
   margin: 0 0 20px;
 }
 
@@ -46,7 +47,7 @@ select {
   border-radius: 3px;
   min-width: 160px;
   padding: 4px 4px;
-  font-size: 0.9rem;
+  font-size: 0.9em;
 }
 
 div.result {
@@ -61,7 +62,7 @@ input#result-field {
   width: 100%;
   width: -webkit-fill-available;
   padding: 6px 8px;
-  font-size: 0.95rem;
+  font-size: 0.95em;
 }
 
 .buttons {
@@ -72,5 +73,5 @@ input#result-field {
 }
 
 button {
-  font-size: 0.86rem;
+  font-size: 0.86em;
 }
